backend/core-service/k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: core-service
  namespace: default
  labels:
    app: core-service
spec:
  type: ClusterIP
  ports:
  - port: 80
    targetPort: 3000
    protocol: TCP
    name: http
  selector:
    app: core-service
